--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" href="./css/style.scss" />
     <script src="./js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>KEK</h1>
+  </body>
 </html>
