Components and Parallax

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Weather App</title>
     <link rel="stylesheet" href="./css/style.scss" />
-    <script src="./js/main.js"></script>
   </head>
   <body>
-    <h1>KEK</h1>
+    <header><div class="header-logo">zahmarno</div></header>
+    <main id="app" class="unit-celsius"></main>
+    <div
+      id="gl"
+      data-horizontalThreshold="20"
+      data-verticalThreshold="20"
+    ></div>
+    <script src="./js/index.js"></script>
   </body>
 </html>
